--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,6 @@
 [REPOSITORY]
 URL = https://raw.githubusercontent.com/zoomHKG/alfred-repository/master/movies.json
+
+[SCHEDULER]
+# interval in seconds
+INTERVAL = 10
