--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,26 @@
 astroid==2.0
 autopep8==1.3.5
+beautifulsoup4==4.6.0
+cachetools==2.1.0
 certifi==2018.4.16
 chardet==3.0.4
 colorama==0.3.9
 gitdb2==2.0.4
 GitPython==2.1.11
+httplib2==0.11.3
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 pycodestyle==2.4.0
 pylint==2.0.0
+PyYAML==3.13
 requests==2.19.1
+rsa==3.4.2
 six==1.11.0
 smmap2==2.0.4
 tornado==5.1
 typed-ast==1.1.0
+uritemplate==3.0.0
 urllib3==1.23
 wrapt==1.10.11
